qrogue/game/world/dungeon_generator/other_parsers/areas_parser/QrogueAreasParser.py
# Generated from D:/Documents/pycharm_workspace/Qrogue/qrogue/game/world/dungeon_generator/other_parsers\QrogueAreas.g4 by ANTLR 4.10.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys


class QrogueAreasParser ( Parser ):

    grammarFileName = "QrogueAreas.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"':'", u"'('", u"')'", u"'TODO: implement in importing grammar #override'", 
                     u"'one way'", u"'['", u"']'", u"'[Layout]'", u"<INVALID>", 
                     u"'[Hallways]'", u"'visible'", u"'foggy'", u"'World'", 
                     u"'Level'", u"'Spawn'", u"'Wild'", u"'Shop'", u"'Riddle'", 
                     u"'Boss'", u"'Gate'", u"'Treasure'", u"'open'", u"'closed'", 
                     u"'locked'", u"'event'", u"'permanent'", u"'entangled'", 
                     u"<INVALID>", u"'tutorial'", u"'trigger'", u"'Qrogue<'", 
                     u"'>Qrogue'", u"'~'", u"'|'", u"','", u"'#'", u"'..'", 
                     u"'__'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"LAYOUT", u"ROOMS", u"HALLWAYS", u"VISIBLE_LITERAL", 
                      u"FOGGY_LITERAL", u"WORLD_LITERAL", u"LEVEL_LITERAL", 
                      u"SPAWN_LITERAL", u"WILD_LITERAL", u"SHOP_LITERAL", 
                      u"RIDDLE_LITERAL", u"BOSS_LITERAL", u"GATE_ROOM_LITERAL", 
                      u"TREASURE_LITERAL", u"OPEN_LITERAL", u"CLOSED_LITERAL", 
                      u"LOCKED_LITERAL", u"EVENT_LITERAL", u"PERMANENT_LITERAL", 
                      u"ENTANGLED_LITERAL", u"DIRECTION", u"TUTORIAL_LITERAL", 
                      u"TRIGGER_LITERAL", u"HEADER", u"ENDER", u"HORIZONTAL_SEPARATOR", 
                      u"VERTICAL_SEPARATOR", u"LIST_SEPARATOR", u"WALL", 
                      u"EMPTY_HALLWAY", u"EMPTY_ROOM", u"DIGIT", u"INTEGER", 
                      u"FLOAT", u"IMAG_NUMBER", u"SIGN", u"CHARACTER_LOW", 
                      u"CHARACTER_UP", u"CHARACTER", u"TEXT", u"ROOM_ID", 
                      u"HALLWAY_ID", u"REFERENCE", u"WS", u"UNIVERSAL_SEPARATOR", 
                      u"COMMENT", u"LINE_COMMENT" ]

    RULE_layout = 0
    RULE_l_room_row = 1
    RULE_l_hallway_row = 2
    RULE_rooms = 3
    RULE_room = 4
    RULE_r_attributes = 5
    RULE_r_visibility = 6
    RULE_r_type = 7
    RULE_room_content = 8
    RULE_hallways = 9
    RULE_hallway = 10
    RULE_h_attributes = 11
    RULE_integer = 12
    RULE_complex_number = 13

    ruleNames =  [ u"layout", u"l_room_row", u"l_hallway_row", u"rooms", 
                   u"room", u"r_attributes", u"r_visibility", u"r_type", 
                   u"room_content", u"hallways", u"hallway", u"h_attributes", 
                   u"integer", u"complex_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    LAYOUT=8
    ROOMS=9
    HALLWAYS=10
    VISIBLE_LITERAL=11
    FOGGY_LITERAL=12
    WORLD_LITERAL=13
    LEVEL_LITERAL=14
    SPAWN_LITERAL=15
    WILD_LITERAL=16
    SHOP_LITERAL=17
    RIDDLE_LITERAL=18
    BOSS_LITERAL=19
    GATE_ROOM_LITERAL=20
    TREASURE_LITERAL=21
    OPEN_LITERAL=22
    CLOSED_LITERAL=23
    LOCKED_LITERAL=24
    EVENT_LITERAL=25
    PERMANENT_LITERAL=26
    ENTANGLED_LITERAL=27
    DIRECTION=28
    TUTORIAL_LITERAL=29
    TRIGGER_LITERAL=30
    HEADER=31
    ENDER=32
    HORIZONTAL_SEPARATOR=33
    VERTICAL_SEPARATOR=34
    LIST_SEPARATOR=35
    WALL=36
    EMPTY_HALLWAY=37
    EMPTY_ROOM=38
    DIGIT=39
    INTEGER=40
    FLOAT=41
    IMAG_NUMBER=42
    SIGN=43
    CHARACTER_LOW=44
    CHARACTER_UP=45
    CHARACTER=46
    TEXT=47
    ROOM_ID=48
    HALLWAY_ID=49
    REFERENCE=50
    WS=51
    UNIVERSAL_SEPARATOR=52
    COMMENT=53
    LINE_COMMENT=54

    def __init__(self, input, output=sys.stdout):
        super(QrogueAreasParser, self).__init__(input, output=output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LayoutContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.LayoutContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LAYOUT(self):
            return self.getToken(QrogueAreasParser.LAYOUT, 0)

        def l_room_row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueAreasParser.L_room_rowContext)
            else:
                return self.getTypedRuleContext(QrogueAreasParser.L_room_rowContext,i)


        def HORIZONTAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.HORIZONTAL_SEPARATOR)
            else:
                return self.getToken(QrogueAreasParser.HORIZONTAL_SEPARATOR, i)

        def l_hallway_row(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueAreasParser.L_hallway_rowContext)
            else:
                return self.getTypedRuleContext(QrogueAreasParser.L_hallway_rowContext,i)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_layout

        def enterRule(self, listener):
            if hasattr(listener, "enterLayout"):
                listener.enterLayout(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLayout"):
                listener.exitLayout(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLayout"):
                return visitor.visitLayout(self)
            else:
                return visitor.visitChildren(self)




    def layout(self):

        localctx = QrogueAreasParser.LayoutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_layout)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(QrogueAreasParser.LAYOUT)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.HORIZONTAL_SEPARATOR:
                self.state = 29
                self.match(QrogueAreasParser.HORIZONTAL_SEPARATOR)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.l_room_row()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.VERTICAL_SEPARATOR:
                self.state = 36
                self.l_hallway_row()
                self.state = 37
                self.l_room_row()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.HORIZONTAL_SEPARATOR:
                self.state = 44
                self.match(QrogueAreasParser.HORIZONTAL_SEPARATOR)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_room_rowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.L_room_rowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueAreasParser.VERTICAL_SEPARATOR, i)

        def ROOM_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.ROOM_ID)
            else:
                return self.getToken(QrogueAreasParser.ROOM_ID, i)

        def EMPTY_ROOM(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.EMPTY_ROOM)
            else:
                return self.getToken(QrogueAreasParser.EMPTY_ROOM, i)

        def HALLWAY_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueAreasParser.HALLWAY_ID, i)

        def EMPTY_HALLWAY(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.EMPTY_HALLWAY)
            else:
                return self.getToken(QrogueAreasParser.EMPTY_HALLWAY, i)

        def getRuleIndex(self):
            return QrogueAreasParser.RULE_l_room_row

        def enterRule(self, listener):
            if hasattr(listener, "enterL_room_row"):
                listener.enterL_room_row(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitL_room_row"):
                listener.exitL_room_row(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitL_room_row"):
                return visitor.visitL_room_row(self)
            else:
                return visitor.visitChildren(self)




    def l_room_row(self):

        localctx = QrogueAreasParser.L_room_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_l_room_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(QrogueAreasParser.VERTICAL_SEPARATOR)
            self.state = 51
            _la = self._input.LA(1)
            if not(_la==QrogueAreasParser.EMPTY_ROOM or _la==QrogueAreasParser.ROOM_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.EMPTY_HALLWAY or _la==QrogueAreasParser.HALLWAY_ID:
                self.state = 52
                _la = self._input.LA(1)
                if not(_la==QrogueAreasParser.EMPTY_HALLWAY or _la==QrogueAreasParser.HALLWAY_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 53
                _la = self._input.LA(1)
                if not(_la==QrogueAreasParser.EMPTY_ROOM or _la==QrogueAreasParser.ROOM_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(QrogueAreasParser.VERTICAL_SEPARATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L_hallway_rowContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.L_hallway_rowContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VERTICAL_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.VERTICAL_SEPARATOR)
            else:
                return self.getToken(QrogueAreasParser.VERTICAL_SEPARATOR, i)

        def HALLWAY_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueAreasParser.HALLWAY_ID, i)

        def EMPTY_HALLWAY(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.EMPTY_HALLWAY)
            else:
                return self.getToken(QrogueAreasParser.EMPTY_HALLWAY, i)

        def getRuleIndex(self):
            return QrogueAreasParser.RULE_l_hallway_row

        def enterRule(self, listener):
            if hasattr(listener, "enterL_hallway_row"):
                listener.enterL_hallway_row(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitL_hallway_row"):
                listener.exitL_hallway_row(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitL_hallway_row"):
                return visitor.visitL_hallway_row(self)
            else:
                return visitor.visitChildren(self)




    def l_hallway_row(self):

        localctx = QrogueAreasParser.L_hallway_rowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_l_hallway_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(QrogueAreasParser.VERTICAL_SEPARATOR)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                _la = self._input.LA(1)
                if not(_la==QrogueAreasParser.EMPTY_HALLWAY or _la==QrogueAreasParser.HALLWAY_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==QrogueAreasParser.EMPTY_HALLWAY or _la==QrogueAreasParser.HALLWAY_ID):
                    break

            self.state = 67
            self.match(QrogueAreasParser.VERTICAL_SEPARATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.RoomsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROOMS(self):
            return self.getToken(QrogueAreasParser.ROOMS, 0)

        def room(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueAreasParser.RoomContext)
            else:
                return self.getTypedRuleContext(QrogueAreasParser.RoomContext,i)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_rooms

        def enterRule(self, listener):
            if hasattr(listener, "enterRooms"):
                listener.enterRooms(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRooms"):
                listener.exitRooms(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRooms"):
                return visitor.visitRooms(self)
            else:
                return visitor.visitChildren(self)




    def rooms(self):

        localctx = QrogueAreasParser.RoomsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rooms)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(QrogueAreasParser.ROOMS)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.ROOM_ID:
                self.state = 70
                self.room()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.RoomContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROOM_ID(self):
            return self.getToken(QrogueAreasParser.ROOM_ID, 0)

        def r_attributes(self):
            return self.getTypedRuleContext(QrogueAreasParser.R_attributesContext,0)


        def room_content(self):
            return self.getTypedRuleContext(QrogueAreasParser.Room_contentContext,0)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_room

        def enterRule(self, listener):
            if hasattr(listener, "enterRoom"):
                listener.enterRoom(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRoom"):
                listener.exitRoom(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRoom"):
                return visitor.visitRoom(self)
            else:
                return visitor.visitChildren(self)




    def room(self):

        localctx = QrogueAreasParser.RoomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_room)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(QrogueAreasParser.ROOM_ID)
            self.state = 77
            self.r_attributes()
            self.state = 78
            self.match(QrogueAreasParser.T__0)
            self.state = 79
            self.room_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_attributesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.R_attributesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def r_visibility(self):
            return self.getTypedRuleContext(QrogueAreasParser.R_visibilityContext,0)


        def r_type(self):
            return self.getTypedRuleContext(QrogueAreasParser.R_typeContext,0)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_r_attributes

        def enterRule(self, listener):
            if hasattr(listener, "enterR_attributes"):
                listener.enterR_attributes(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_attributes"):
                listener.exitR_attributes(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitR_attributes"):
                return visitor.visitR_attributes(self)
            else:
                return visitor.visitChildren(self)




    def r_attributes(self):

        localctx = QrogueAreasParser.R_attributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_r_attributes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(QrogueAreasParser.T__1)
            self.state = 82
            self.r_visibility()
            self.state = 83
            self.r_type()
            self.state = 84
            self.match(QrogueAreasParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_visibilityContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.R_visibilityContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VISIBLE_LITERAL(self):
            return self.getToken(QrogueAreasParser.VISIBLE_LITERAL, 0)

        def FOGGY_LITERAL(self):
            return self.getToken(QrogueAreasParser.FOGGY_LITERAL, 0)

        def getRuleIndex(self):
            return QrogueAreasParser.RULE_r_visibility

        def enterRule(self, listener):
            if hasattr(listener, "enterR_visibility"):
                listener.enterR_visibility(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_visibility"):
                listener.exitR_visibility(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitR_visibility"):
                return visitor.visitR_visibility(self)
            else:
                return visitor.visitChildren(self)




    def r_visibility(self):

        localctx = QrogueAreasParser.R_visibilityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_r_visibility)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QrogueAreasParser.VISIBLE_LITERAL or _la==QrogueAreasParser.FOGGY_LITERAL:
                self.state = 86
                _la = self._input.LA(1)
                if not(_la==QrogueAreasParser.VISIBLE_LITERAL or _la==QrogueAreasParser.FOGGY_LITERAL):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.R_typeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SPAWN_LITERAL(self):
            return self.getToken(QrogueAreasParser.SPAWN_LITERAL, 0)

        def BOSS_LITERAL(self):
            return self.getToken(QrogueAreasParser.BOSS_LITERAL, 0)

        def WILD_LITERAL(self):
            return self.getToken(QrogueAreasParser.WILD_LITERAL, 0)

        def SHOP_LITERAL(self):
            return self.getToken(QrogueAreasParser.SHOP_LITERAL, 0)

        def RIDDLE_LITERAL(self):
            return self.getToken(QrogueAreasParser.RIDDLE_LITERAL, 0)

        def GATE_ROOM_LITERAL(self):
            return self.getToken(QrogueAreasParser.GATE_ROOM_LITERAL, 0)

        def TREASURE_LITERAL(self):
            return self.getToken(QrogueAreasParser.TREASURE_LITERAL, 0)

        def getRuleIndex(self):
            return QrogueAreasParser.RULE_r_type

        def enterRule(self, listener):
            if hasattr(listener, "enterR_type"):
                listener.enterR_type(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_type"):
                listener.exitR_type(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitR_type"):
                return visitor.visitR_type(self)
            else:
                return visitor.visitChildren(self)




    def r_type(self):

        localctx = QrogueAreasParser.R_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_r_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QrogueAreasParser.SPAWN_LITERAL) | (1 << QrogueAreasParser.WILD_LITERAL) | (1 << QrogueAreasParser.SHOP_LITERAL) | (1 << QrogueAreasParser.RIDDLE_LITERAL) | (1 << QrogueAreasParser.BOSS_LITERAL) | (1 << QrogueAreasParser.GATE_ROOM_LITERAL) | (1 << QrogueAreasParser.TREASURE_LITERAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Room_contentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.Room_contentContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_room_content

        def enterRule(self, listener):
            if hasattr(listener, "enterRoom_content"):
                listener.enterRoom_content(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRoom_content"):
                listener.exitRoom_content(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRoom_content"):
                return visitor.visitRoom_content(self)
            else:
                return visitor.visitChildren(self)




    def room_content(self):

        localctx = QrogueAreasParser.Room_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_room_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(QrogueAreasParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HallwaysContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.HallwaysContext, self).__init__(parent, invokingState)
            self.parser = parser

        def HALLWAYS(self):
            return self.getToken(QrogueAreasParser.HALLWAYS, 0)

        def hallway(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QrogueAreasParser.HallwayContext)
            else:
                return self.getTypedRuleContext(QrogueAreasParser.HallwayContext,i)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_hallways

        def enterRule(self, listener):
            if hasattr(listener, "enterHallways"):
                listener.enterHallways(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHallways"):
                listener.exitHallways(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitHallways"):
                return visitor.visitHallways(self)
            else:
                return visitor.visitChildren(self)




    def hallways(self):

        localctx = QrogueAreasParser.HallwaysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_hallways)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(QrogueAreasParser.HALLWAYS)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QrogueAreasParser.HALLWAY_ID:
                self.state = 94
                self.hallway()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HallwayContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.HallwayContext, self).__init__(parent, invokingState)
            self.parser = parser

        def HALLWAY_ID(self):
            return self.getToken(QrogueAreasParser.HALLWAY_ID, 0)

        def h_attributes(self):
            return self.getTypedRuleContext(QrogueAreasParser.H_attributesContext,0)


        def getRuleIndex(self):
            return QrogueAreasParser.RULE_hallway

        def enterRule(self, listener):
            if hasattr(listener, "enterHallway"):
                listener.enterHallway(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHallway"):
                listener.exitHallway(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitHallway"):
                return visitor.visitHallway(self)
            else:
                return visitor.visitChildren(self)




    def hallway(self):

        localctx = QrogueAreasParser.HallwayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_hallway)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(QrogueAreasParser.HALLWAY_ID)
            self.state = 101
            self.h_attributes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class H_attributesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueAreasParser.H_attributesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def OPEN_LITERAL(self):
            return self.getToken(QrogueAreasParser.OPEN_LITERAL, 0)

        def CLOSED_LITERAL(self):
            return self.getToken(QrogueAreasParser.CLOSED_LITERAL, 0)

        def LOCKED_LITERAL(self):
            return self.getToken(QrogueAreasParser.LOCKED_LITERAL, 0)

        def EVENT_LITERAL(self):
            return self.getToken(QrogueAreasParser.EVENT_LITERAL, 0)

        def REFERENCE(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.REFERENCE)
            else:
                return self.getToken(QrogueAreasParser.REFERENCE, i)

        def DIRECTION(self):
            return self.getToken(QrogueAreasParser.DIRECTION, 0)

        def ENTANGLED_LITERAL(self):
            return self.getToken(QrogueAreasParser.ENTANGLED_LITERAL, 0)

        def HALLWAY_ID(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.HALLWAY_ID)
            else:
                return self.getToken(QrogueAreasParser.HALLWAY_ID, i)

        def TUTORIAL_LITERAL(self):
            return self.getToken(QrogueAreasParser.TUTORIAL_LITERAL, 0)

        def TRIGGER_LITERAL(self):
            return self.getToken(QrogueAreasParser.TRIGGER_LITERAL, 0)

        def PERMANENT_LITERAL(self):
            return self.getToken(QrogueAreasParser.PERMANENT_LITERAL, 0)

        def LIST_SEPARATOR(self, i=None):
            if i is None:
                return self.getTokens(QrogueAreasParser.LIST_SEPARATOR)
            else:
                return self.getToken(QrogueAreasParser.LIST_SEPARATOR, i)

        def getRuleIndex(self):
            return QrogueAreasParser.RULE_h_attributes

        def enterRule(self, listener):
            if hasattr(listener, "enterH_attributes"):
                listener.enterH_attributes(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitH_attributes"):
                listener.exitH_attributes(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitH_attributes"):
                return visitor.visitH_attributes(self)
            else:
                return visitor.visitChildren(self)




    def h_attributes(self):
